Un mensaje que describa tus cambios, ej: Arreglo del error de compilación en user.entity

--- a/.env
+++ b/.env
@@ -16,3 +16,5 @@ DB_NAME=schoolsyn-database
 FRONTEND_URL=http://localhost:5173
 NODE_ENV=production
 VITE_SOCKET_URL=http://localhost:3000
+SENDGRID_API_KEY= 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
+SENDGRID_VERIFIED_SENDER= schoolsync.real@gmail.com
