--- a/SchoolSync/package.json
+++ b/SchoolSync/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
+    "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@heroui/react": "^2.7.8",
     "@tailwindcss/vite": "^4.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.2",
-    "socket.io-client": "^4.8.1"
+    "react-router-dom": "^7.6.1",
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
+    "tailwind-scrollbar": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
